--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,17 @@
         </repository>
     </repositories>
     <dependencies>
+
         <dependency>
             <groupId>org.thingsboard</groupId>
             <artifactId>rest-client</artifactId>
             <version>3.3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
